--- a/Knitting_Products/Knitting_Products/Knitting_Products.csproj
+++ b/Knitting_Products/Knitting_Products/Knitting_Products.csproj
@@ -207,9 +207,11 @@
     <Content Include="Views\Web.config" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Home\Catalog.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Catalog\" />
     <Folder Include="Views\Shared\" />
   </ItemGroup>
   <ItemGroup>
